@@ -1,3 +1,8 @@
+= Edge
+
+* Fixed links including prior quoted phrases. #17
+
+
 = RedCloth 4.0
 
 * New SuperRedCloth (RedCloth 4.0) is a total rewrite using Ragel for the parsing.
